tests/ui/type-alias-impl-trait/type-alias-impl-trait-unconstrained-lifetime.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/type-alias-impl-trait-unconstrained-lifetime.rs:10:6
   |
LL | impl<'a, I: Iterator<Item = i32>> Trait for (i32, I) {
   |      ^^ unconstrained lifetime parameter
   |
help: this use of an otherwise unconstrained lifetime is not allowed
  --> $DIR/type-alias-impl-trait-unconstrained-lifetime.rs:12:29
   |
LL |     type Associated = (i32, impl Iterator<Item = i32>);
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
